learn service, observable, DI, RXjs

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,7 @@
 
   <div app-test>
   </div>
+  <app-basic-binding></app-basic-binding>
+  <span>================================================================</span>
+  <app-property-binding></app-property-binding>
 </div>
